--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,4 @@ GOVUK_NOTIFY_CALLBACK_API_KEY=
 DSI_API_URL=https://test-api.signin.education.gov.uk
 DSI_API_SECRET=xxxxxxxxxxxx-xxxxx-xxxxxxxx-xxxxxxxx
 SANDBOX=false
+QA_USER_UIDS_URL=
